# glwrap

./: .clang-format  .gitignore
glwrap/: buffer.hpp  errors.hpp  include_gl.h  object.hpp  resource.hpp  shader.hpp  texture.hpp  vertex_array.hpp
test/: .clang-format  CMakeLists.txt  glad.c  main.cpp  tests.cpp
test/include/glad/: glad.h
test/tests/: buffer.cpp  shader.cpp  vertex_array.cpp
